--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         html, body {
             font-family: 'JetBrains Mono', monospace;
             font-size: 12pt;
-            color: #BC8D81;
+            color: #5C866E;
             height: 100%;
             background-color: #232323;
         }
@@ -36,12 +36,12 @@
         }
 
         *::-webkit-scrollbar-track {
-            background: #87795D;
+            background: #383129;
         }
 
         *::-webkit-scrollbar-thumb {
-            background-color: #376D72;
-            border: 3px solid #376D72;
+            background-color: #867867;
+            border: 3px solid #867867;
             border-radius: 6px;
         }
 
@@ -154,6 +154,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            text-align: center;
         }
 
         @media print {
@@ -1247,8 +1248,8 @@
             lineThickness: 1,
             porteLineHeight: 10,
             noteColor: "#BC8D81",
-            mainColor: "#87795D",
-            porteLineColor: "#376D72",
+            mainColor: "#BCA181",
+            porteLineColor: "#536B77",
             paperBgColor: "#2B2B2B",
             ghostColor: "#726756",
             defMeasureCount: 4,
