--- a/templates/index.html
+++ b/templates/index.html
@@ -85,11 +85,11 @@
             height: 100%;
         }
 
-        .btn-group .tmm-menu-btn:not(:first-child) {
+        .btn-group .tmm-menu-btn:not(:first-child), .btn-group .tmm-menu-btn-no:not(:first-child) {
             margin-left: 0.2em;
         }
 
-        .btn-group .tmm-menu-btn {
+        .btn-group .tmm-menu-btn, .btn-group .tmm-menu-btn-no {
             position: relative;
             border: 1px solid #EAE7DA;
             padding: 0.2em 0.4em;
@@ -103,11 +103,11 @@
             justify-content: center;
         }
 
-        .btn-group .tmm-menu-btn.clicked {
+        .btn-group .tmm-menu-btn-no:focus, .btn-group .tmm-menu-btn.clicked {
             top: -2px;
             box-shadow: 0 2px 8px -6px #141414;
             background-color: #FCFBF2;
-            z-index: 1;
+            outline: none;
         }
 
         .btn-group .tmm-menu-btn img {
@@ -134,7 +134,7 @@
             transition: all 100ms;
         }
 
-        .clicked .ddTmmList {
+        .tmm-menu-btn-no:focus .ddTmmList {
             height: 10em;
             opacity: 1;
         }
@@ -254,6 +254,7 @@
         let selectedMakam = sender.innerHTML;
         let accidentals = JSON.parse(sender.getAttribute('data-accidentals'));
         document.getElementById('selectedMakamName').innerHTML = selectedMakam;
+        sender.parentNode.parentNode.blur();
     }
 
     function usulMenuItemClick(e) {
@@ -263,9 +264,11 @@
         document.getElementById('selectedUsulNum').innerHTML = meter[0];
         document.getElementById('selectedUsulDen').innerHTML = meter[1];
         document.getElementById('selectedUsulName').innerHTML = usul;
+        sender.parentNode.parentNode.blur();
     }
 
     function createTMMMenu(containerSelector) {
+        let tabIndex = 1;
         let tmmMakams = [
             {name: "Do Majör", accidentals: []},
             {name: "Acemaşîran", accidentals: ['B4b5']},
@@ -292,7 +295,9 @@
         dvGroupGlobals.className = 'btn-group';
 
         let makamInput = document.createElement('div');
-        makamInput.className = 'tmm-menu-btn';
+        makamInput.tabIndex = tabIndex;
+        tabIndex += 1;
+        makamInput.className = 'tmm-menu-btn-no';
         makamInput.innerHTML = '<span id="selectedMakamName">Hicaz</span>';
         makamInput.style.position = 'relative';
 
@@ -332,7 +337,8 @@
         ];
 
         let meterInput = document.createElement('div');
-        meterInput.className = 'tmm-menu-btn';
+        meterInput.className = 'tmm-menu-btn-no';
+        meterInput.tabIndex = tabIndex;
         meterInput.innerHTML = '<div id="selectedUsulWrapper">' +
             '<span class="usulNum" id="selectedUsulNum">9</span>' +
             '<span class="usulDivision"></span>' +
@@ -497,6 +503,7 @@
         scoreMenu.appendChild(dvGroupLocs);
 
         document.querySelector(containerSelector).append(scoreMenu);
+
 
         let tmmMenuButtons = document.querySelectorAll('.tmm-menu-btn');
         for (let tmmMenuButton of tmmMenuButtons) {
